Show subject under class property predicate
Closes #230

--- a/src/components/editor/propertyView.html
+++ b/src/components/editor/propertyView.html
@@ -39,6 +39,7 @@
       <non-editable title="Type" value="ctrl.predicate.rawType"></non-editable>
       <non-editable title="Range" value="ctrl.predicate.range"></non-editable>
       <non-editable title="Is defined by" value="ctrl.predicate.modelId" link="ctrl.predicate.iowUrl()"></non-editable>
+      <subject-view subject="ctrl.predicate.subject"></subject-view>
     </uib-accordion-group>
   </uib-accordion>
 </div>
