All curie inputs to have placeholder
Closes #228

--- a/src/components/editor/editableMultipleCurieSelect.html
+++ b/src/components/editor/editableMultipleCurieSelect.html
@@ -14,8 +14,7 @@
           <div class="delete-item badge" ng-click="ctrl.deleteCurie(item)">&times;</div>
         </div>
 
-        <input placeholder="{{('Add ' + ctrl.type) | translate}}"
-               name="curieInput"
+        <input name="curieInput"
                id="{{ctrl.id}}"
                curie-input
                model="ctrl.model"
