Filter for non-selectable search results
Closes #236

--- a/src/components/editor/searchClassModal.html
+++ b/src/components/editor/searchClassModal.html
@@ -28,6 +28,10 @@
             </select>
           </div>
         </div>
+
+        <div class="checkbox">
+          <label><input type="checkbox" ng-model="ctrl.showExcluded">{{'Show already added' | translate}}</label>
+        </div>
       </div>
 
       <div class="col-md-4 search-results">
