--- a/src/components/model/searchRequireModal.html
+++ b/src/components/model/searchRequireModal.html
@@ -18,6 +18,10 @@
                  key-control="ctrl.searchResults" />
           <i class="glyphicon glyphicon-search form-control-feedback"></i>
         </div>
+
+        <div class="checkbox">
+          <label><input type="checkbox" ng-model="ctrl.showExcluded">{{'Show already added' | translate}}</label>
+        </div>
       </div>
 
       <div class="col-md-6 search-results with-button">
