--- a/src/components/editor/addConceptModal.html
+++ b/src/components/editor/addConceptModal.html
@@ -22,7 +22,24 @@
         </div>
       </editable>
 
-      <p><span translate>Concept is suggested to scheme</span> {{ctrl.reference.title | translateValue}}</p>
+      <pre>{{ctrl.broaderConcept.id}}</pre>
+
+      <editable title="Broader concept">
+        <div class="input-group input-group-md">
+          <input id="concept"
+                 type="text"
+                 class="form-control"
+                 iow-typeahead
+                 selection-mapper="ctrl.mapSelection"
+                 options="ctrl.options"
+                 datasets="ctrl.dataset"
+                 ng-model="ctrl.broaderConcept"
+                 placeholder="{{'Search from concept database' | translate}}"/>
+          <i class="glyphicon glyphicon-search form-control-feedback"></i>
+        </div>
+      </editable>
+
+      <p><span translate>Concept is suggested to scheme</span> {{ctrl.reference.label | translateValue}}</p>
     </modal-body>
 
     <modal-buttons>
