IsDefinedBy is a object for class and predicates should follow

--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -19,7 +19,7 @@
 
 <editable-multiple-curie-select id="equivalentClass" type="class" curies="ctrl.class.equivalentClasses" model="ctrl.model"></editable-multiple-curie-select>
 
-<non-editable title="Is defined by" value="ctrl.class.modelId" link="ctrl.class.iowUrl()"></non-editable>
+<non-editable title="Is defined by" value="ctrl.class.definedBy.label" link="ctrl.class.iowUrl()"></non-editable>
 
 <editable title="State" value-as-localization-key="true" ng-if="!ctrl.class.unsaved">
   <state-select id="classState" state="ctrl.class.state" model="ctrl.model"></state-select>
