Unify model with profile and shape with class in the UI components

--- a/src/components/editor/predicateForm.html
+++ b/src/components/editor/predicateForm.html
@@ -1,6 +1,6 @@
 <h3>{{ctrl.predicate.type + ' information' | capitalize | translate}}</h3>
 
-<editable title="{{ctrl.labelName}}">
+<editable title="{{ctrl.predicate.type + ' label' | capitalize}}">
   <input id="predicateName" class="form-control" type="text" localized-input="label" ng-model="ctrl.predicate.label" />
 </editable>
 
