--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -1,7 +1,7 @@
 
-<h3 translate>Class information</h3>
+<h3>{{ctrl.class.type + ' information' | capitalize | translate}}</h3>
 
-<editable title="Class label">
+<editable title="{{ctrl.class.type + ' label' | capitalize}}">
   <input id="classLabel" class="form-control" type="text" localized-input="label" ng-model="ctrl.class.label"/>
 </editable>
 
@@ -27,7 +27,7 @@
 
 <editable-subject-select references="ctrl.model.references" type="class" subject="ctrl.class.subject" disable="!ctrl.inUnstableState"></editable-subject-select>
 
-<h3 translate>Class properties</h3>
+<h3>{{ctrl.class.type + ' properties' | capitalize | translate}}</h3>
 
 <uib-accordion close-others="true">
   <uib-accordion-group ng-repeat="property in ctrl.class.properties  | orderBy:'index'" is-open="ctrl.propertyViews[property.id].isOpen">
