--- a/src/components/editor/searchClassModal.html
+++ b/src/components/editor/searchClassModal.html
@@ -38,7 +38,7 @@
         <search-results items="ctrl.searchResults" excluded="ctrl.excludedClasses" on-select="ctrl.selectItem(item)">
           <i ng-class="searchResult.glyphIconClass"></i>
           <h5>{{searchResult | translateLabel}}</h5>
-          <p>{{searchResult.model | translateLabel}}</p>
+          <p>{{searchResult.definedBy | translateLabel}}</p>
         </search-results>
       </div>
 
