--- a/src/components/model/modelView.html
+++ b/src/components/model/modelView.html
@@ -13,7 +13,7 @@
         </editable-entity-buttons>
 
         <div class="col-md-6">
-          <editable title="Model label">
+          <editable title="{{ctrl.model.type + ' label' | capitalize}}">
             <input id="modelLabel" class="form-control" type="text" localized-input="modelLabel" ng-model="ctrl.editableInEdit.label" />
           </editable>
 
