Application profile creation implemented

--- a/src/components/group/addModelModal.html
+++ b/src/components/group/addModelModal.html
@@ -1,6 +1,6 @@
 <form name="addModelForm">
 <modal-template>
-  <modal-title>{{'Add model' | translate}}</modal-title>
+  <modal-title>{{'Add ' + ctrl.type | translate}}</modal-title>
 
   <modal-body>
     <editable title="Prefix">
