--- a/src/components/group/group.html
+++ b/src/components/group/group.html
@@ -27,7 +27,8 @@
           <div class="group-panel">
             <div class="iow-panel-heading"><h2 translate>Models</h2></div>
             <div class="panel-body">
-              <ul class="selectable-panel__list">
+              <span ng-if="ctrl.models.length === 0" translate>No models yet</span>
+              <ul ng-if="ctrl.models.length > 0" class="selectable-panel__list">
                 <li ng-repeat="model in ctrl.models"
                     ng-click="ctrl.selectModel(model)">
                   <i ng-class="model.glyphIconClass"></i>
@@ -41,7 +42,8 @@
           <div class="group-panel">
             <div class="iow-panel-heading"><h2 translate>Application profiles</h2></div>
             <div class="panel-body">
-              <ul class="selectable-panel__list">
+              <span ng-if="ctrl.profiles.length === 0" translate>No profiles yet</span>
+              <ul ng-if="ctrl.profiles.length > 0" class="selectable-panel__list">
                 <li ng-repeat="profile in ctrl.profiles"
                     ng-click="ctrl.selectModel(profile)">
                   <i ng-class="profile.glyphIconClass"></i>
