--- a/src/app.scss
+++ b/src/app.scss
@@ -619,18 +619,19 @@ a.accordion-toggle {
   .bullet-container {
     float: left;
     width: $bullet-width;
+    padding-top: 10px;
+    padding-left: 10px;
 
     .bullet {
       text-align: center;
       vertical-align: text-bottom;
-      border: 2px solid #ddd;
+      border: 1px solid #ddd;;
       border-radius: 60px;
       padding: 0;
       background-color: #f5f5f5;
 
       span {
         display: inline-block;
-        font-weight: bold;
         padding: 35px 40px;
         text-align: center;
         margin: 0;
