Made content more readable and usable by narrowing the content columns slightly

--- a/src/components/frontPage.html
+++ b/src/components/frontPage.html
@@ -1,6 +1,6 @@
 <div ng-show="ctrl.groups">
 
-  <div class="col-md-6">
+  <div class="col-md-4">
 
     <h2 translate>Interoperability method</h2>
 
@@ -16,7 +16,7 @@
 
   </div>
 
-  <div class="col-md-6">
+  <div class="col-md-5 col-md-offset-1">
 
     <div class="frontpage-panel">
       <div class="iow-panel-heading"><h2 translate>Search</h2></div>
