--- a/src/components/group/group.html
+++ b/src/components/group/group.html
@@ -13,7 +13,7 @@
           <button type="button" class="btn btn-default right" ng-click="ctrl.addModel('profile')" ng-if="ctrl.canAddModel()" translate>Add profile</button>
         </editable-entity-buttons>
 
-        <div class="col-md-6">
+        <div class="col-md-4">
           <editable title="Group label">
             <input id="groupLabel" class="form-control" type="text" localized-input="label" ng-model="ctrl.editableInEdit.label" />
           </editable>
@@ -23,7 +23,7 @@
           </editable>
         </div>
 
-        <div class="col-md-6">
+        <div class="col-md-5 col-md-offset-1">
           <div class="group-panel">
             <div class="iow-panel-heading"><h2 translate>Models</h2></div>
             <div class="panel-body">
