--- a/src/app.scss
+++ b/src/app.scss
@@ -456,6 +456,16 @@ selection-view, .main-editable-content {
   }
 }
 
+.navbar-default .navbar-nav > li > a:hover {
+    background-color: transparent;
+    text-decoration: underline;
+}
+
+.navbar-right .navbar-btn button.btn:hover {
+  background-color: transparent;
+    text-decoration: underline;
+}
+
 .h2 {
   background-color: #f5f5f5;
 }
