Simplified and unified various link hover effects

--- a/src/app.scss
+++ b/src/app.scss
@@ -158,11 +158,12 @@ ul.errors {
       cursor: pointer;
       padding: 5px 0 5px 10px;
       font-size: medium;
-      border: 1px solid #fff;
+      
     }
 
     li:hover {
-      border: 1px solid #ddd;
+      color: $brand-primary;
+      background-color: $list-group-hover-bg;
     }
   }
 }
@@ -180,8 +181,6 @@ ul.errors {
 
 .model-panel__selection {
   background-color: $list-group-hover-bg;
-  border: 1px solid $pre-border-color;
-  border-right-style: none;
 }
 
 uib-accordion .panel-group {
@@ -190,6 +189,7 @@ uib-accordion .panel-group {
   .panel-title {
     a:hover {
       text-decoration: none;
+      color: $brand-primary;
     }
     a {
       text-decoration: none;
@@ -381,6 +381,7 @@ selection-view, .main-editable-content {
     padding-left: 10px;
     .glyphicon {
       font-size: large;
+      margin-left: 10px;
     }
   }
 }
@@ -389,14 +390,13 @@ selection-view, .main-editable-content {
   @extend .main-header;
   cursor: pointer;
   h2:hover {
-    text-decoration: underline;
+    color: $brand-primary;
   }
 }
 
 .main-editable-content {
   @include clearfix;
   padding-bottom: 10px;
-  border-top: solid 1px #ddd;
 }
 
 .modal-dialog {
@@ -688,10 +688,14 @@ a.accordion-toggle {
     padding: 10px 20px;
   }
   li:hover {
+    text-decoration: none;
     background-color: $list-group-hover-bg;
   }
   li.selection {
     background-color: $list-group-hover-bg;
+  }
+  .link {
+    text-decoration: none;
   }
 }
 
