--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -13,8 +13,12 @@
   <textarea id="classComment" class="form-control" localized-input ng-model="ctrl.class.comment"></textarea>
 </editable>
 
-<editable title="Superclass" link="ctrl.linkToSuperclass()">
+<editable ng-if="ctrl.class.type === 'class'" title="Superclass" link="ctrl.linkToSuperclass()">
   <curie-select id="superClass" type="class" curie="ctrl.class.subClassOf" model="ctrl.model" after-selected="ctrl.addPropertiesFromSuperClass(id)"></curie-select>
+</editable>
+
+<editable ng-if="ctrl.class.type === 'shape'" title="Specialized from class" link="ctrl.linkToScopeclass()">
+  <curie-select id="scopeClass" type="class" curie="ctrl.class.scopeClass" model="ctrl.model" mandatory="true"></curie-select>
 </editable>
 
 <editable-multiple-curie-select id="equivalentClass" type="class" curies="ctrl.class.equivalentClasses" model="ctrl.model"></editable-multiple-curie-select>
