--- a/src/components/editor/propertyView.html
+++ b/src/components/editor/propertyView.html
@@ -29,6 +29,14 @@
     <curie-select id="{{ctrl.property.id + 'valueClass'}}" type="class" curie="ctrl.property.valueClass" mandatory="!ctrl.inUnstableState" model="ctrl.model"></curie-select>
   </editable>
 
+  <editable ng-if="ctrl.model.type === 'profile'" title="Min count">
+    <input id="{{ctrl.property.id + 'minCount'}}" class="form-control" type="number" ng-model="ctrl.property.minCount" />
+  </editable>
+
+  <editable ng-if="ctrl.model.type === 'profile'" title="Max count">
+    <input id="{{ctrl.property.id + 'maxCount'}}" class="form-control" type="number" ng-model="ctrl.property.maxCount" />
+  </editable>
+
   <uib-accordion>
     <uib-accordion-group is-open="predicateOpen">
       <uib-accordion-heading>
