--- a/src/components/navigation/loginModal.html
+++ b/src/components/navigation/loginModal.html
@@ -7,7 +7,7 @@
   </modal-body>
 
   <modal-buttons>
-    <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.login()" translate>Login</button>
-    <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.register()" translate>Register</button>
+    <button type="button" class="btn btn-default" ng-click="ctrl.login()" translate>Login</button>
+    <button type="button" class="btn btn-default" ng-click="ctrl.register()" translate>Register</button>
   </modal-buttons>
 </modal-template>
