--- a/src/components/model/searchRequireModal.html
+++ b/src/components/model/searchRequireModal.html
@@ -34,6 +34,6 @@
   </modal-body>
 
   <modal-buttons>
-    <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.close()" translate>Cancel</button>
+    <button type="button" class="btn btn-default" ng-click="ctrl.close()" translate>Cancel</button>
   </modal-buttons>
 </modal-template>
