--- a/src/components/editor/searchClassModal.html
+++ b/src/components/editor/searchClassModal.html
@@ -52,8 +52,8 @@
   </modal-body>
 
   <modal-buttons>
-    <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.close()" translate>Cancel</button>
-    <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.confirm()" ng-disabled="!ctrl.selectedClass" translate>Use class</button>
+    <button type="button" class="btn btn-default" ng-click="ctrl.close()" translate>Cancel</button>
+    <button type="button" class="btn btn-default" ng-click="ctrl.confirm()" ng-disabled="!ctrl.selectedClass" translate>Use class</button>
   </modal-buttons>
 </modal-template>
 
