--- a/src/app.scss
+++ b/src/app.scss
@@ -12,7 +12,7 @@
 }
 
 $selectionListWidth: 275px;
-$footer-height: 40px;
+$footer-height: 50px;
 
 .panel-footer {
   position: fixed;
@@ -20,12 +20,14 @@ $footer-height: 40px;
   height: $footer-height;
   width: 100%;
   font-size: small;
+  border: none;
+  padding: 15px;
 }
 
 .btn-default {
   color: #555555;
-  background-color: #f5f5f5;
-  border-color: #ddd;
+  background-color: #e9e9e9;
+  border: none;
 }
 
 
@@ -191,7 +193,7 @@ ul.errors {
 }
 
 uib-accordion .panel-group {
-  margin: 20px auto;
+  margin: 15px auto;
 
   .panel-title {
     a:hover {
@@ -261,6 +263,7 @@ selection-view, .main-editable-content {
   margin-bottom: 0;
   border: none;
   font-weight: 400;
+  background-color: white;
 }
 
 .component {
@@ -307,8 +310,8 @@ selection-view, .main-editable-content {
     margin: 0;
     padding: 10px;
     top: 75px;
-    background-color: rgba(231,231,231,0.5);
-    border: 1px solid #ccc;
+    background-color: rgba(231,231,231,0.9);
+    border: none;
     line-height: 0.6;
   }
 
@@ -447,12 +450,16 @@ selection-view, .main-editable-content {
   }
 }
 
+.navbar {
+  min-height: 60px;
+}
+
 .navbar-brand {
-  line-height: 35px;
+  line-height: 40px;
 }
 
 .navbar-right {
-  margin: 5px;
+  margin: 10px;
 
   .navbar-btn {
     margin: 0;
@@ -496,7 +503,8 @@ selection-view, .main-editable-content {
   @include clearfix;
 
   z-index: 1000;
-  padding: 10px 15px 0 10px;
+  padding: 10px 10px 10px 10px;
+  background-color: #f9f9f9;
 
   p.button-label {
     padding-top: 8px;
@@ -515,8 +523,6 @@ selection-view, .main-editable-content {
   .alert {
     clear: both;
   }
-
-  background-color: #fff;
 }
 
 modal-body {
