--- a/src/components/editor/searchConceptModal.html
+++ b/src/components/editor/searchConceptModal.html
@@ -16,24 +16,27 @@
         </div>
 
         <editable title="Concept">
-          <div class="input-group input-group-md">
-            <input id="concept"
-                   type="text"
-                   class="form-control"
-                   autofocus
-                   iow-typeahead
-                   selection-mapper="ctrl.mapSelection"
-                   options="ctrl.options"
-                   datasets="ctrl.datasets"
-                   required
-                   ng-model="ctrl.concept"
-                   placeholder="{{'Search from concept database' | translate}}"/>
-            <i class="glyphicon glyphicon-search form-control-feedback"></i>
-          </div>
+          <input id="concept"
+                 type="text"
+                 class="form-control"
+                 autofocus
+                 iow-typeahead
+                 selection-mapper="ctrl.mapSelection"
+                 options="ctrl.options"
+                 datasets="ctrl.datasets"
+                 required
+                 ng-model="ctrl.concept"
+                 placeholder="{{'Search from concept database' | translate}}"/>
+          <i class="glyphicon glyphicon-search form-control-feedback"></i>
         </editable>
 
-        <label for="concept" translate>Comment</label>
-        <p>{{ctrl.concept.comment | translateValue}}</p>
+        <div ng-if="ctrl.concept">
+          <label for="concept" translate>Chosen concept</label>
+          <p>{{ctrl.concept | translateLabel}}</p>
+
+          <label for="concept" translate>Comment</label>
+          <p>{{ctrl.concept.comment | translateValue}}</p>
+        </div>
 
         <div ng-if="ctrl.newCreation">
           <editable title="{{ctrl.labelTitle}}">
