--- a/src/app.scss
+++ b/src/app.scss
@@ -388,8 +388,12 @@ selection-view, .main-editable-content {
 }
 
 .main-header {
+  background-color: #f7f7f7;
+  padding: 5px 0 5px 5px;
+
   h2 {
     padding-left: 10px;
+    margin-top: 10px;
     .glyphicon {
       font-size: large;
       margin-left: 10px;
@@ -400,6 +404,7 @@ selection-view, .main-editable-content {
 .model-header {
   @extend .main-header;
   cursor: pointer;
+
   h2:hover {
     color: $brand-primary;
   }
@@ -504,7 +509,6 @@ selection-view, .main-editable-content {
 
   z-index: 1000;
   padding: 10px 10px 10px 10px;
-  background-color: #f9f9f9;
 
   p.button-label {
     padding-top: 8px;
