--- a/src/app.scss
+++ b/src/app.scss
@@ -14,6 +14,11 @@
 $selectionListWidth: 275px;
 $footer-height: 50px;
 
+.btn-group.right .dropdown-menu {
+  right: 0;
+  left: auto;
+}
+
 .panel-footer {
   position: fixed;
   bottom: 0;
@@ -167,7 +172,7 @@ ul.errors {
       cursor: pointer;
       padding: 5px 0 5px 10px;
       font-size: medium;
-      
+
     }
 
     li:hover {
