--- a/src/components/editor/classView.html
+++ b/src/components/editor/classView.html
@@ -4,6 +4,7 @@
       <selection-view editable-controller="ctrl">
         <selection-buttons>
           <button type="button" class="btn btn-default right" ng-click="ctrl.addProperty()" ng-show="ctrl.canModify()" translate>Add property</button>
+          <export ng-hide="ctrl.isEditing()" entity="ctrl.class"></export>
         </selection-buttons>
 
         <selection-content>
