Improved legibility of class layout

--- a/src/app.scss
+++ b/src/app.scss
@@ -276,6 +276,7 @@ selection-view, .main-editable-content {
 
   .selection-form {
     min-height: calc(100vh - 134px);
+    padding-right: 40px;
 
     .property-ordering {
       position: absolute;
