--- a/src/app.scss
+++ b/src/app.scss
@@ -104,9 +104,7 @@ ul.errors {
   text-decoration: underline;
 }
 
-.panel-group .glyphicon {
-  position: inherit;
-}
+
 
 .model-panel--left-placeholder {
   float: left;
@@ -240,8 +238,7 @@ selection-view, .main-editable-content {
 }
 
 .editable-wrap {
-
-  word-break: break-all;
+ word-wrap: break-word;
 
   a {
     cursor: pointer;
@@ -387,9 +384,6 @@ selection-view, .main-editable-content {
   font-size: 26px;
   h3 {
     margin: 0;
-    span {
-      vertical-align: middle;
-    }
   }
 }
 
@@ -651,7 +645,7 @@ a.accordion-toggle {
   }
 
   border: none;
-  
+
 }
 
 .point {
