--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -21,7 +21,7 @@
   <curie-select id="scopeClass" type="class" curie="ctrl.class.scopeClass" model="ctrl.model" mandatory="true"></curie-select>
 </editable>
 
-<editable-multiple-curie-select id="equivalentClass" type="class" curies="ctrl.class.equivalentClasses" model="ctrl.model"></editable-multiple-curie-select>
+<editable-multiple-curie-select id="equivalentClass" type="class" curies="ctrl.class.equivalentClasses" model="ctrl.model" title="{{'Equivalent class'}}"></editable-multiple-curie-select>
 
 <non-editable title="Is defined by" value="ctrl.class.definedBy.label" link="ctrl.class.iowUrl()"></non-editable>
 
