UI component for showing and editing class constraint
Closes #257

--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -55,6 +55,10 @@
   </uib-accordion>
 </div>
 
+<div ng-show="ctrl.class.type === 'shape'">
+  <h4 ng-show="ctrl.class.constraint.items.length > 0 || ctrl.isEditing()" translate>Logical constraints</h4>
+  <editable-constraint constraint="ctrl.class.constraint" model="ctrl.model"></editable-constraint>
+</div>
 
 <h4 translate>Additional information</h4>
 
