--- a/src/components/model/modelView.html
+++ b/src/components/model/modelView.html
@@ -14,7 +14,7 @@
         </editable-entity-buttons>
 
         <div class="col-md-5">
-          <editable title="{{ctrl.model.type + ' label' | capitalize}}">
+          <editable title="{{ctrl.model.normalizedType + ' label' | capitalize}}">
             <input id="modelLabel" class="form-control" type="text" localized-input="modelLabel" ng-model="ctrl.editableInEdit.label" />
           </editable>
 
